--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "QR Scanner",
-    "name": "QR Code Scanner PWA",
+    "short_name": "WALDO QR",
+    "name": "WALDO ZONES CONFIG",
     "icons": [
         {
             "src": "/images/icons-192.png",
