--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     ],
     "start_url": "/index.html",
     "background_color": "#FFFFFF",
-    "display": "standalone",
+    "display": "fullscreen",
     "scope": "/",
     "theme_color": "#FFFFFF"
 }
